WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33390
bindings/v8/DOMData is missing a virtual destructor
https://bugs.webkit.org/show_bug.cgi?id=33390
Summary
bindings/v8/DOMData is missing a virtual destructor
Andrei Popescu
Reported
2010-01-08 10:32:40 PST
DOMData is the base class for ChildThreadDOMData and MainThreadDOMData classes but it does not have a virtual destructor. While this isn't currently causing any leaks, since there are no instances of ChildThreadDOMData or MainThreadDOMData that are manipulated via a DOMData pointer, the ARM GCC compiler generates the following compilation error: "/WebCore/bindings/v8/DOMData.h:45: error: 'class WebCore::DOMData' has virtual functions and accessible non-virtual destructor" We therefore need to add a virtual destructor to DOMData.
Attachments
Patch
(1.85 KB, patch)
2010-01-08 17:27 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-01-08 17:24:19 PST
Do you have a patch for this, or should I write one?
Adam Barth
Comment 2
2010-01-08 17:27:04 PST
Created
attachment 46184
[details]
Patch
Adam Barth
Comment 3
2010-01-08 17:28:02 PST
(Please wait for the chromium-ews because I didn't compile this locally.)
Dmitry Titov
Comment 4
2010-01-08 23:13:56 PST
Comment on
attachment 46184
[details]
Patch r=me, cq+
WebKit Commit Bot
Comment 5
2010-01-08 23:40:10 PST
Comment on
attachment 46184
[details]
Patch Clearing flags on attachment: 46184 Committed
r53037
: <
http://trac.webkit.org/changeset/53037
>
WebKit Commit Bot
Comment 6
2010-01-08 23:40:15 PST
All reviewed patches have been landed. Closing bug.
Andrei Popescu
Comment 7
2010-01-09 04:24:01 PST
(In reply to
comment #1
)
> Do you have a patch for this, or should I write one?
Yes, I had the patch. I just got interrupted before I could upload it, then had to leave to catch my train. I woke up this morning and found the bug fixed. Thank you :) I'll try to upload my patches faster in the future.
Adam Barth
Comment 8
2010-01-09 10:03:22 PST
> I'll try to upload my patches faster in the future.
No worries. It just seemed like a trivial bug in code I wrote, so I fixed it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug