third_party/WebKit/WebCore/bindings/v8/DOMData.cpp
@@ -45,6 +45,10 @@ DOMData::DOMData()
 {
 }
 
+DOMData::~DOMData()
+{
+}
+
 DOMData* DOMData::getCurrent()
 {
     if (WTF::isMainThread())
