third_party/WebKit/WebCore/bindings/v8/DOMData.h
@@ -46,6 +46,7 @@ namespace WebCore {
     class DOMData : public Noncopyable {
     public:
         DOMData();
+        virtual ~DOMData();
 
         static DOMData* getCurrent();
         virtual DOMDataStore& getStore() = 0;
